...
    >
      <NativeTabs.Trigger name="index">
        <NativeTabs.Trigger.Label>Home</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Icon md="home" />
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="pay">
        <NativeTabs.Trigger.Label>Pay</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Icon md="north_east" />
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="receive">
        <NativeTabs.Trigger.Label>Receive</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Icon md="south_west" />
      </NativeTabs.Trigger>
...
